--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.example.user.kamusgue"
+        applicationId "com.example.user.kamusbahasa"
         minSdkVersion 18
         targetSdkVersion 27
         versionCode 1
@@ -23,7 +23,7 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation "com.github.mancj:MaterialSearchBar:0.7.1"
     implementation 'gr.pantrif:easy-android-splash-screen:0.0.1'
     testImplementation 'junit:junit:4.12'
